tests/cases/should_fail/misc/triple_colon_in_access_name.stderr
error: expected a name here
 --> $DIR/triple_colon_in_access_name.hash:1:7
1 |   a::b:::c<int>();
  |         ^ here
